# cmake-demo

./: .gitignore  CMakeLists.txt  Makefile  readme.md
libhello/: Makefile  hello.c  hello.h
math/: Makefile  MathFunctions.c  MathFunctions.h
src/: CMakeLists.txt  Makefile  hello  main.c
